rglage de fonctionnement__btn avec les absolue et relative et reglage de grandeur

--- a/index.html
+++ b/index.html
@@ -1,206 +1,207 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--[if IE]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <![endif]-->
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <![endif]-->
     <!--pour voir les raison de sait 3 ligne https://www.alsacreations.com/astuce/lire/1437-comment-interdire-le-mode-de-compatibilite-sur-ie.html-->
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="public/css/style.css" type="text/css">
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="public/css/style.css" type="text/css" />
     <title>Ohmyfood</title>
-    <script src="https://kit.fontawesome.com/3261bc58c2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/3261bc58c2.js"
+      crossorigin="anonymous"
+    ></script>
     <!--apelle de la bibliotheque Font Awesome.-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <!--appelle pour m'es 2 polices-->
+  </head>
 
-
-
-
-</head>
-
-<body>
+  <body>
     <header>
-        <div class="hautmenu">
-  
-            <h1 class="roboto--font">ohmyfood</h1>
-        </div>
+      <div class="hautmenu">
+        <h1 class="roboto--font">ohmyfood</h1>
+      </div>
 
-        <div class="header__milieu">
-            <p><i class="fas fa-map-marker-alt"></i> Paris , Belleville</p>
+      <div class="header__milieu">
+        <p><i class="fas fa-map-marker-alt"></i> Paris , Belleville</p>
+      </div>
+      <div class="header__bas">
+        <h1>Réservez le menu qui <br />vous convient</h1>
+        <p>
+          Découvrez des restaurants d'exception,<br />
+          séléctionnés par nos soins.
+        </p>
+        <div class="header__bas__btn">
+          <h2>Explorer nos restaurants</h2>
         </div>
-        <div class="header__bas">
-            <h1>Réservez le menu qui <br />vous convient</h1>
-            <p>Découvrez des restaurants d'exception,<br />
-                séléctionnés par nos soins.</p>
-            <div class="header__bas__btn ">
-                <h2>Explorer nos restaurants</h2>
-            </div>
-        </div>
+      </div>
     </header>
     <main>
-        <div class="fonctionnement">.
-            <h1>Fonctionnement</h1>
+      <div class="fonctionnement">
+        .
+        <h1>Fonctionnement</h1>
 
+        <div class="Fonctionnement__block">
+          <div class="Fonctionnement__btn1 Fonctionnement__btn-color">
+            <div>
+              <p
+                class="
+                  Fonctionnement__btn__chiffre Fonctionnement__btn-placement
+                "
+              >
+                1
+              </p>
+            </div>
+            <div><i class="fas fa-mobile-alt"></i></div>
+            <div>
+              <p class="Fonctionnement__btn__p">Choisissez un restaurant</p>
+            </div>
+          </div>
 
-            <div class="Fonctionnement__btn Fonctionnement__btn-color">
-                <div>
-                    <p class="Fonctionnement__btn__chiffre fonctionnement__btn-placement">1</p>
+          <div class="Fonctionnement__btn2 Fonctionnement__btn-color">
+            <div>
+              <p
+                class="
+                  Fonctionnement__btn__chiffre Fonctionnement__btn-placement
+                "
+              >
+                2
+              </p>
+            </div>
+            <div><i class="fas fa-list-ul"></i></div>
+            <div>
+              <p class="Fonctionnement__btn__p">Composez votre menu</p>
+            </div>
+          </div>
+
+          <div class="Fonctionnement__btn3 Fonctionnement__btn-color2">
+            <div>
+              <p
+                class="
+                  Fonctionnement__btn__chiffre Fonctionnement__btn-placement
+                "
+              >
+                3
+              </p>
+            </div>
+            <div><i class="fas fa-store"></i></div>
+            <div>
+              <p class="Fonctionnement__btn__p">Dégustez au restaurant</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="restaurants">
+        <h1>Restaurants</h1>
+
+        <a href="menu/la_palette_du_gout.html"
+          ><div class="restaurants__card">
+            <div class="restaurants__card__image">
+              <div>
+                <img
+                  src="img/restaurants/la_palette_du_gout.jpg"
+                  alt="assiette du restaurant la palette du goût"
+                  title="restaurant la palette du goût a Ménilmontant"
+                />
+              </div>
+              <div class="restaurants__card__nouveau">
+                <div class="restaurants__card__nouveau__texte">
+                  <p>Nouveau</p>
+                  <!--je me suis aide de https://www.xul.fr/css/texte-sur-image.php-->
                 </div>
-                <div><i class="fas fa-mobile-alt"></i></div>
-                <div>
-                    <p class="Fonctionnement__btn__p"> Choisissez un restaurant</p>
-                </div>
-
-
+              </div>
             </div>
 
-            <div class="Fonctionnement__btn Fonctionnement__btn-color ">
-                <div>
-                    <p class="Fonctionnement__btn__chiffre fonctionnement__btn-placement">2</p>
-                </div>
-                <div><i class="tartenpion fas fa-list-ul"></i></div>
-                <div>
-                    <p> Composez votre menu</p>
-                </div>
-
-
+            <div class="restaurants__bas">
+              <div class="restaurants__bas__gauche">
+                <h2>La palette du goût</h2>
+                <p>Ménilmontan</p>
+              </div>
+              <div class="restaurants__bas__coeur">
+                <p><i class="far fa-heart"></i></p>
+              </div>
+            </div></div
+        ></a>
+        <div class="restaurants__card" class="img">
+          <div class="restaurants__card__image2">
+            <div>
+              <img
+                src="img/restaurants/la_note_enchantee.jpg"
+                alt="assiette du restaurant la note enchanté"
+                title="restaurant la note enchantée"
+              />
             </div>
-
-            <div class=" Fonctionnement__btn Fonctionnement__btn-color2 ">
-                <div>
-                    <p class="Fonctionnement__btn__chiffre fonctionnement__btn-placement">3</p>
-                </div>
-                <div><i class="fas fa-store"></i></div>
-                <div>
-                    <p> Dégustez au restaurant</p>
-                </div>
-
+            <div class="restaurants__card__nouveau">
+              <div class="restaurants__card__nouveau__texte">
+                <p>Nouveau</p>
+                <!--je me suis aide de https://www.xul.fr/css/texte-sur-image.php-->
+              </div>
             </div>
+          </div>
+
+          <div class="restaurants__bas">
+            <div class="restaurants__bas__gauche">
+              <h2>La note enchantée</h2>
+              <p>Charonee</p>
+            </div>
+            <div class="restaurants__bas__coeur">
+              <p><i class="far fa-heart"></i></p>
+            </div>
+          </div>
         </div>
 
-        <div class=" restaurants">
-            <h1>Restaurants</h1>
+        <div class="restaurants__card">
+          <div>
+            <img
+              src="img/restaurants/a_la_francaise.jpg"
+              alt="assiette du restaurant À la francaise"
+              title="restaurant à la française"
+            />
+          </div>
 
-
-            <a href="menu/la_palette_du_gout.html"><div class="restaurants__card">
-                <div class="restaurants__card__image">
-                    <div><img src="img/restaurants/la_palette_du_gout.jpg"
-                            alt="assiette du restaurant la palette du goût"
-                            title="restaurant la palette du goût a Ménilmontant">
-
-                    </div>
-                    <div class="restaurants__card__nouveau">
-                        <div class="restaurants__card__nouveau__texte">
-                            <p>Nouveau</p>
-                            <!--je me suis aide de https://www.xul.fr/css/texte-sur-image.php-->
-                        </div>
-                    </div>
-                </div>
-
-                <div class="restaurants__bas">
-
-                    <div class="restaurants__bas__gauche">
-                        <h2>La palette du goût</h2>
-                        <p>Ménilmontan</p>
-                    </div>
-                    <div class="restaurants__bas__coeur">
-                        <p><i class="far fa-heart"></i></p>
-                    </div>
-
-
-                </div>
-
-            </div></a>
-            <div class="restaurants__card" class=img>
-                <div class="restaurants__card__image2">
-                    <div><img src="img/restaurants/la_note_enchantee.jpg" alt="assiette du restaurant la note enchanté"
-                            title="restaurant la note enchantée">
-
-                    </div>
-                    <div class="restaurants__card__nouveau">
-                        <div class="restaurants__card__nouveau__texte">
-                            <p>Nouveau</p>
-                            <!--je me suis aide de https://www.xul.fr/css/texte-sur-image.php-->
-                        </div>
-                    </div>
-                </div>
-
-                <div class="restaurants__bas">
-
-                    <div class="restaurants__bas__gauche">
-                        <h2>La note enchantée</h2>
-                        <p>Charonee</p>
-                    </div>
-                    <div class="restaurants__bas__coeur">
-                        <p><i class="far fa-heart"></i></p>
-                    </div>
-
-
-                </div>
-
+          <div class="restaurants__bas">
+            <div class="restaurants__bas__gauche">
+              <h2>À la française</h2>
+              <p>Cité Rouge</p>
             </div>
-
-
-
-
-            <div class="restaurants__card">
-                <div><img src="img/restaurants/a_la_francaise.jpg" alt="assiette du restaurant À la francaise"
-                        title="restaurant à la française">
-
-                </div>
-
-
-
-                <div class="restaurants__bas">
-
-                    <div class="restaurants__bas__gauche">
-                        <h2>À la française</h2>
-                        <p>Cité Rouge</p>
-                    </div>
-                    <div class="restaurants__bas__coeur">
-                        <p><i class="far fa-heart"></i></p>
-                    </div>
-
-
-                </div>
-
+            <div class="restaurants__bas__coeur">
+              <p><i class="far fa-heart"></i></p>
             </div>
-            <div class="restaurants__card">
-                <div><img src="img/restaurants/le_delice_des_sens.jpg" alt="assiette du restaurant le délice des sens"
-                        title="restaurant le délice des sens">
-
-                </div>
-                <div class="restaurants__bas">
-
-                    <div class="restaurants__bas__gauche">
-                        <h2>Le délice des sens</h2>
-                        <p>Folie-Méricourt</p>
-                    </div>
-                    <div class="restaurants__bas__coeur">
-                        <p><i class="far fa-heart"></i></p>
-                    </div>
-
-
-                </div>
-
-            </div>
-
+          </div>
         </div>
-
-
-
+        <div class="restaurants__card">
+          <div>
+            <img
+              src="img/restaurants/le_delice_des_sens.jpg"
+              alt="assiette du restaurant le délice des sens"
+              title="restaurant le délice des sens"
+            />
+          </div>
+          <div class="restaurants__bas">
+            <div class="restaurants__bas__gauche">
+              <h2>Le délice des sens</h2>
+              <p>Folie-Méricourt</p>
+            </div>
+            <div class="restaurants__bas__coeur">
+              <p><i class="far fa-heart"></i></p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
-        <h1 class="roboto--font">ohmyfood</h1>
-        <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
-        <p><i class="fas fa-hands-helping"></i> Devenir partenaire</p>
-        <p>Mentions légales</p>
-        <p><a href="mailto:Contact@ohmyfood.com">Contact</a></p>
+      <h1 class="roboto--font">ohmyfood</h1>
+      <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
+      <p><i class="fas fa-hands-helping"></i> Devenir partenaire</p>
+      <p>Mentions légales</p>
+      <p><a href="mailto:Contact@ohmyfood.com">Contact</a></p>
     </footer>
-
-</body>
-
+  </body>
 </html>
