premier partie spinner

--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
       rel="stylesheet"
     />
     <!--appelle pour m'es 2 polices-->
+    <meta
+      name="description"
+      content="Nous souhaitons proposer à nos clients les menus de restaurants gastronomiques."
+    />
   </head>
 
   <body>
+    <div class="mon_loading_spinner">
+      <img src="../img/logo/spinner.jpg" />
+    </div>
     <header>
       <div class="hautmenu">
         <h1 class="roboto--font">ohmyfood</h1>
