--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
   </head>
 
   <body>
-    <div class="mon_loading_spinner">
-      <img src="../img/logo/spinner.jpg" />
-    </div>
+    <div class="loadingspinner"></div>
+
     <header>
       <div class="hautmenu">
         <h1 class="roboto--font">ohmyfood</h1>
