--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
   </head>
 
   <body>
-    <div class="loadingspinner"></div>
+    <div class="lds-grid">
+      <div class="lds-grid"></div>
+      <div class="lds-grid"></div>
+      <div class="lds-grid"></div>
+      <div class="lds-grid"></div>
+      <div class="lds-grid"></div>
+      <div class="lds-grid"></div>
+      <div class="lds-grid"></div>
+      <div class="lds-grid"></div>
+      <div class="lds-grid"></div>
+    </div>
 
     <header>
       <div class="hautmenu">
