essai sur animation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     />
   </head>
   <body>
+    <div class="loader">Loading...</div>
     <header>
       <div class="hautmenu">
         <h1 class="roboto--font">ohmyfood</h1>
