debut spaning loanner

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     />
   </head>
   <body>
-    <div class="loader">Loading...</div>
+    <div class="spinner__box">
+      <div class="loader">Loading...</div>
+    </div>
     <header>
       <div class="hautmenu">
         <h1 class="roboto--font">ohmyfood</h1>
