rectification du bacgroun du herder et de fonctionnement pour que le loaning spinner s'effacce bien au bougt de 3 min

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </header>
     <main>
-      <div class="fonctionnement">
+      <div class="Fonctionnement">
         .
         <h1>Fonctionnement</h1>
 
