fin du spinner loanner

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div class="spinner__box">
-      <div class="loader">Loading...</div>
+      <div class="loader">ohmyfood</div>
     </div>
     <header>
       <div class="hautmenu">
