test animation coeur

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <p>Charonee</p>
             </div>
             <div class="restaurants__bas__coeur">
-              <p><i class="far fa-heart"></i></p>
+              <p><i class="far fa-heart coeur"></i></p>
             </div>
           </div>
         </div>
@@ -178,7 +178,7 @@
               <p>Cité Rouge</p>
             </div>
             <div class="restaurants__bas__coeur">
-              <p><i class="far fa-heart"></i></p>
+              <p><i class="far fa-heart coeur"></i></p>
             </div>
           </div>
         </div>
@@ -196,7 +196,7 @@
               <p>Folie-Méricourt</p>
             </div>
             <div class="restaurants__bas__coeur">
-              <p><i class="far fa-heart"></i></p>
+              <p><i class="far fa-heart coeur"></i></p>
             </div>
           </div>
         </div>
