amelioration animation coeur

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <p>Ménilmontan</p>
               </div>
               <div class="restaurants__bas__coeur">
-                <p><i class="far fa-heart"></i></p>
+                <p><i class="far fa-heart coeur"></i></p>
               </div>
             </div></div
         ></a>
