amelioration spinner loanner

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   </head>
   <body>
     <div class="spinner__box">
-      <div class="loader">ohmyfood</div>
+      <div class="loader">
+        <span class="loader__titre"> ohmyfood</span>
+      </div>
     </div>
     <header>
       <div class="hautmenu">
