--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
                 <p>Ménilmontan</p>
               </div>
               <div class="restaurants__bas__coeur">
-                <p><i class="far fa-heart coeur"></i></p>
+                <p>
+                  <i class="fas fa-heart fa-3x coeur__etat__colorant"></i>
+                  <i class="far fa-heart fa-3x coeur__etat__normal"></i>
+                </p>
               </div>
             </div></div
         ></a>
@@ -160,7 +163,10 @@
               <p>Charonee</p>
             </div>
             <div class="restaurants__bas__coeur">
-              <p><i class="far fa-heart coeur"></i></p>
+              <p>
+                <i class="fas fa-heart fa-3x coeur__etat__colorant"></i>
+                <i class="far fa-heart fa-3x coeur__etat__normal"></i>
+              </p>
             </div>
           </div>
         </div>
@@ -180,7 +186,10 @@
               <p>Cité Rouge</p>
             </div>
             <div class="restaurants__bas__coeur">
-              <p><i class="far fa-heart coeur"></i></p>
+              <p>
+                <i class="fas fa-heart fa-3x coeur__etat__colorant"></i>
+                <i class="far fa-heart fa-3x coeur__etat__normal"></i>
+              </p>
             </div>
           </div>
         </div>
@@ -198,7 +207,10 @@
               <p>Folie-Méricourt</p>
             </div>
             <div class="restaurants__bas__coeur">
-              <p><i class="far fa-heart coeur"></i></p>
+              <p>
+                <i class="fas fa-heart fa-3x coeur__etat__colorant"></i>
+                <i class="far fa-heart fa-3x coeur__etat__normal"></i>
+              </p>
             </div>
           </div>
         </div>
