travaille sur le coeur

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <![endif]-->
     <!--pour voir les raison de sait 3 ligne https://www.alsacreations.com/astuce/lire/1437-comment-interdire-le-mode-de-compatibilite-sur-ie.html-->
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="public/css/style.css" type="text/css" />
+
     <title>Ohmyfood</title>
     <script
       src="https://kit.fontawesome.com/3261bc58c2.js"
@@ -24,6 +24,7 @@
       name="description"
       content="Nous souhaitons proposer à nos clients les menus de restaurants gastronomiques."
     />
+    <link rel="stylesheet" href="public/css/style.css" type="text/css" />
   </head>
   <body>
     <div class="spinner__box">
@@ -133,10 +134,12 @@
                 <p>Ménilmontan</p>
               </div>
               <div class="restaurants__bas__coeur">
-                <p>
-                  <i class="fas fa-heart fa-3x coeur__etat__colorant"></i>
-                  <i class="far fa-heart fa-3x coeur__etat__normal"></i>
-                </p>
+                <div class="box__coeur">
+                  <p>
+                    <i class="fas fa-heart fa-3x coeur__etat__colorant"></i>
+                    <i class="far fa-heart fa-3x coeur__etat__normal"></i>
+                  </p>
+                </div>
               </div>
             </div></div
         ></a>
