--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               </div>
               <div class="restaurants__bas__coeur">
                 <div class="box__coeur">
-                  <p>
+                  <p class="coeur">
                     <i class="fas fa-heart fa-3x coeur__etat__colorant"></i>
                     <i class="far fa-heart fa-3x coeur__etat__normal"></i>
                   </p>
