--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
               <div class="restaurants__bas__coeur">
                 <div class="box__coeur">
                   <p class="coeur">
-                    <i class="fas fa-heart fa-3x coeur__etat__colorant"></i>
-                    <i class="far fa-heart fa-3x coeur__etat__normal"></i>
+                    <i class="fas fa-heart coeur__etat__colorant"></i>
+                    <i class="far fa-heart coeur__etat__normal"></i>
                   </p>
                 </div>
               </div>
@@ -166,10 +166,12 @@
               <p>Charonee</p>
             </div>
             <div class="restaurants__bas__coeur">
-              <p>
-                <i class="fas fa-heart fa-3x coeur__etat__colorant"></i>
-                <i class="far fa-heart fa-3x coeur__etat__normal"></i>
-              </p>
+              <div class="box__coeur">
+                <p class="coeur">
+                  <i class="fas fa-heart coeur__etat__colorant"></i>
+                  <i class="far fa-heart coeur__etat__normal"></i>
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -189,10 +191,12 @@
               <p>Cité Rouge</p>
             </div>
             <div class="restaurants__bas__coeur">
-              <p>
-                <i class="fas fa-heart fa-3x coeur__etat__colorant"></i>
-                <i class="far fa-heart fa-3x coeur__etat__normal"></i>
-              </p>
+              <div class="box__coeur">
+                <p class="coeur">
+                  <i class="fas fa-heart coeur__etat__colorant"></i>
+                  <i class="far fa-heart coeur__etat__normal"></i>
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -210,10 +214,12 @@
               <p>Folie-Méricourt</p>
             </div>
             <div class="restaurants__bas__coeur">
-              <p>
-                <i class="fas fa-heart fa-3x coeur__etat__colorant"></i>
-                <i class="far fa-heart fa-3x coeur__etat__normal"></i>
-              </p>
+              <div class="box__coeur">
+                <p class="coeur">
+                  <i class="fas fa-heart coeur__etat__colorant"></i>
+                  <i class="far fa-heart coeur__etat__normal"></i>
+                </p>
+              </div>
             </div>
           </div>
         </div>
