mise en place des lien des card 2,3 et 4 dans index.html

--- a/index.html
+++ b/index.html
@@ -143,86 +143,91 @@
               </div>
             </div></div
         ></a>
-        <div class="restaurants__card" class="img">
-          <div class="restaurants__card__image2">
+        <a href="menu/la_note_enchantee.html">
+          <div class="restaurants__card" class="img">
+            <div class="restaurants__card__image2">
+              <div>
+                <img
+                  src="img/restaurants/la_note_enchantee.jpg"
+                  alt="assiette du restaurant la note enchanté"
+                  title="restaurant la note enchantée"
+                />
+              </div>
+              <div class="restaurants__card__nouveau">
+                <div class="restaurants__card__nouveau__texte">
+                  <p>Nouveau</p>
+                  <!--je me suis aide de https://www.xul.fr/css/texte-sur-image.php-->
+                </div>
+              </div>
+            </div>
+
+            <div class="restaurants__bas">
+              <div class="restaurants__bas__gauche">
+                <h2>La note enchantée</h2>
+                <p>Charonee</p>
+              </div>
+              <div class="restaurants__bas__coeur">
+                <div class="box__coeur">
+                  <p class="coeur">
+                    <i class="fas fa-heart coeur__etat__colorant"></i>
+                    <i class="far fa-heart coeur__etat__normal"></i>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="menu/a_la_francaise.html">
+          <div class="restaurants__card">
             <div>
               <img
-                src="img/restaurants/la_note_enchantee.jpg"
-                alt="assiette du restaurant la note enchanté"
-                title="restaurant la note enchantée"
+                src="img/restaurants/a_la_francaise.jpg"
+                alt="assiette du restaurant À la francaise"
+                title="restaurant à la française"
               />
             </div>
-            <div class="restaurants__card__nouveau">
-              <div class="restaurants__card__nouveau__texte">
-                <p>Nouveau</p>
-                <!--je me suis aide de https://www.xul.fr/css/texte-sur-image.php-->
-              </div>
-            </div>
-          </div>
 
-          <div class="restaurants__bas">
-            <div class="restaurants__bas__gauche">
-              <h2>La note enchantée</h2>
-              <p>Charonee</p>
-            </div>
-            <div class="restaurants__bas__coeur">
-              <div class="box__coeur">
-                <p class="coeur">
-                  <i class="fas fa-heart coeur__etat__colorant"></i>
-                  <i class="far fa-heart coeur__etat__normal"></i>
-                </p>
+            <div class="restaurants__bas">
+              <div class="restaurants__bas__gauche">
+                <h2>À la française</h2>
+                <p>Cité Rouge</p>
+              </div>
+              <div class="restaurants__bas__coeur">
+                <div class="box__coeur">
+                  <p class="coeur">
+                    <i class="fas fa-heart coeur__etat__colorant"></i>
+                    <i class="far fa-heart coeur__etat__normal"></i>
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="restaurants__card">
-          <div>
-            <img
-              src="img/restaurants/a_la_francaise.jpg"
-              alt="assiette du restaurant À la francaise"
-              title="restaurant à la française"
-            />
-          </div>
-
-          <div class="restaurants__bas">
-            <div class="restaurants__bas__gauche">
-              <h2>À la française</h2>
-              <p>Cité Rouge</p>
+        </a>
+        <a href="menu/le_delice_des_sens.html">
+          <div class="restaurants__card">
+            <div>
+              <img
+                src="img/restaurants/le_delice_des_sens.jpg"
+                alt="assiette du restaurant le délice des sens"
+                title="restaurant le délice des sens"
+              />
             </div>
-            <div class="restaurants__bas__coeur">
-              <div class="box__coeur">
-                <p class="coeur">
-                  <i class="fas fa-heart coeur__etat__colorant"></i>
-                  <i class="far fa-heart coeur__etat__normal"></i>
-                </p>
+            <div class="restaurants__bas">
+              <div class="restaurants__bas__gauche">
+                <h2>Le délice des sens</h2>
+                <p>Folie-Méricourt</p>
+              </div>
+              <div class="restaurants__bas__coeur">
+                <div class="box__coeur">
+                  <p class="coeur">
+                    <i class="fas fa-heart coeur__etat__colorant"></i>
+                    <i class="far fa-heart coeur__etat__normal"></i>
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="restaurants__card">
-          <div>
-            <img
-              src="img/restaurants/le_delice_des_sens.jpg"
-              alt="assiette du restaurant le délice des sens"
-              title="restaurant le délice des sens"
-            />
-          </div>
-          <div class="restaurants__bas">
-            <div class="restaurants__bas__gauche">
-              <h2>Le délice des sens</h2>
-              <p>Folie-Méricourt</p>
-            </div>
-            <div class="restaurants__bas__coeur">
-              <div class="box__coeur">
-                <p class="coeur">
-                  <i class="fas fa-heart coeur__etat__colorant"></i>
-                  <i class="far fa-heart coeur__etat__normal"></i>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+        </a>
       </div>
     </main>
     <footer>
