--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 
             <div class="restaurants__bas">
               <div class="restaurants__bas__gauche">
-                <h2>La palette du goût</h2>
-                <p>Ménilmontan</p>
+                <h2 class="black">La palette du goût</h2>
+                <p class="black">Ménilmontan</p>
               </div>
               <div class="restaurants__bas__coeur">
                 <div class="box__coeur">
