--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 
             <div class="restaurants__bas">
               <div class="restaurants__bas__gauche">
-                <h2>La note enchantée</h2>
-                <p>Charonee</p>
+                <h2 class="black">La note enchantée</h2>
+                <p class="black">Charonee</p>
               </div>
               <div class="restaurants__bas__coeur">
                 <div class="box__coeur">
@@ -189,8 +189,8 @@
 
             <div class="restaurants__bas">
               <div class="restaurants__bas__gauche">
-                <h2>À la française</h2>
-                <p>Cité Rouge</p>
+                <h2 class="black">À la française</h2>
+                <p class="black">Cité Rouge</p>
               </div>
               <div class="restaurants__bas__coeur">
                 <div class="box__coeur">
@@ -214,8 +214,8 @@
             </div>
             <div class="restaurants__bas">
               <div class="restaurants__bas__gauche">
-                <h2>Le délice des sens</h2>
-                <p>Folie-Méricourt</p>
+                <h2 class="black">Le délice des sens</h2>
+                <p class="black">Folie-Méricourt</p>
               </div>
               <div class="restaurants__bas__coeur">
                 <div class="box__coeur">
@@ -231,7 +231,7 @@
       </div>
     </main>
     <footer>
-      <h1 class="roboto--font">ohmyfood</h1>
+      <h1 class="roboto--font">o h m y f o o d</h1>
       <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
       <p><i class="fas fa-hands-helping"></i> Devenir partenaire</p>
       <p>Mentions légales</p>
