--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
   </head>
   <body>
     <div class="spinner__box">
-      <div class="loader">
-        <span class="loader__titre"> ohmyfood</span>
-      </div>
+      <div class="loader"><span class="loader__titre">ohmyfood</span></div>
     </div>
     <header>
       <div class="hautmenu">
