modification couleur des lien et rajout de la class black a la fleche des menue du header

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -26,7 +26,7 @@
 
     <header>
       <div class="hautmenu">
-        <div class hautmenu__fleche><a href="../"><i class="fas fa-arrow-left"></i></a></div>
+        <a href="../"><i class="fas fa-arrow-left black"></i></a>
         <h1 class="roboto--font">ohmyfood</h1>
       </div>
 
