mise en place du coeur sur les menue et du titre H2 a cotez

--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -38,9 +38,22 @@
           alt="assiette du restaurant la palette du goût"
           title="restaurant la palette du goût a Ménilmontant"
         />
-        <h1 class="header__titre roboto--font">
-          la palette du goût <i class="far fa-heart"></i>
-        </h1>
+        <div class="header__titre  ">
+            <div class="header__titre__bas">
+              <div class="header__titre__bas__gauche">
+                <h2 class="black">La palette du goût</h2>
+
+              </div>
+              <div class="header__titre__bas__droit">
+                <div class="box__coeur">
+                  <p class="coeur">
+                    <i class="fas fa-heart coeur__etat__colorant"></i>
+                    <i class="far fa-heart coeur__etat__normal"></i>
+                  </p>
+                </div>
+              </div>
+            </div>
+        </div>
       </div>
     </header>
     <main class="main__menu">
