rajout accent sur le titre

--- a/menu/a_la_francaise.html
+++ b/menu/a_la_francaise.html
@@ -8,7 +8,7 @@
     <!--pour voir les raison de sait 3 ligne https://www.alsacreations.com/astuce/lire/1437-comment-interdire-le-mode-de-compatibilite-sur-ie.html-->
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../public/css/style.css" type="text/css" />
-    <title>a la française</title>
+    <title>à la française</title>
     <script
       src="https://kit.fontawesome.com/3261bc58c2.js"
       crossorigin="anonymous"
