coorection sur le title de la pallette du gout

--- a/menu/a_la_francaise.html
+++ b/menu/a_la_francaise.html
@@ -35,7 +35,7 @@
           class="header__img--menu"
           class="main__menu"
           src="../img/restaurants/a_la_francaise.jpg"
-          alt="assiette du restaurant la palette du goût"
+          alt="assiette du restaurant à la française"
           title="restaurant la palette du goût a Ménilmontant"
         />
         <div class="header__titre  ">
