correction header a la française

--- a/menu/a_la_francaise.html
+++ b/menu/a_la_francaise.html
@@ -36,7 +36,7 @@
           class="main__menu"
           src="../img/restaurants/a_la_francaise.jpg"
           alt="assiette du restaurant à la française"
-          title="restaurant la palette du goût a Ménilmontant"
+          title="restaurant à la française"
         />
         <div class="header__titre  ">
             <div class="header__titre__bas">
