--- a/menu/la_palette_du_gout.html
+++ b/menu/la_palette_du_gout.html
@@ -36,7 +36,7 @@
           class="main__menu"
           src="../img/restaurants/la_palette_du_gout.jpg"
           alt="assiette du restaurant la palette du goût"
-          title="restaurant la palette du goût a Ménilmontant"
+          title="restaurant la palette du goût"
         />
         <div class="header__titre  ">
             <div class="header__titre__bas">
