modification header a la francaise

--- a/menu/a_la_francaise.html
+++ b/menu/a_la_francaise.html
@@ -41,7 +41,7 @@
         <div class="header__titre  ">
             <div class="header__titre__bas">
               <div class="header__titre__bas__gauche">
-                <h2 class="black">La palette du goût</h2>
+                <h2 class="black"> À la française </h2>
 
               </div>
               <div class="header__titre__bas__droit">
