--- a/menu/a_la_francaise.html
+++ b/menu/a_la_francaise.html
@@ -70,12 +70,12 @@
         <div class="colonne">
           <div class="plat__card__p">
             <div class="point2">
-              <h2 class="overflow-ellipsis">Fricassée d'escargot</h2>
+              <h2 class="overflow-ellipsis">Tartare de poulpe acidulé</h2>
             </div>
           </div>
           <div class="plat__card__p">
             <div class="point">
-              <p class="overflow-ellipsis">Au pimet D'espelette</p>
+              <p class="overflow-ellipsis">Aux zestes d'orange</p>
             </div>
             <div class="main__menu__argent"><p>25€</p></div>
           </div>
@@ -91,12 +91,12 @@
         <div class="colonne">
           <div class="plat__card__p">
             <div class="point2">
-              <h2 class="overflow-ellipsis">Foie gras de canard mi-cuit</h2>
+              <h2 class="overflow-ellipsis">Velouté de légumes d'antan</h2>
             </div>
           </div>
           <div class="plat__card__p">
             <div class="point">
-              <p class="overflow-ellipsis">Et ses copeaux de truffe noire</p>
+              <p class="overflow-ellipsis">Carotte, panais, topinambour</p>
             </div>
             <div class="main__menu__argent"><p>35€</p></div>
           </div>
@@ -110,14 +110,14 @@
         <div class="colonne">
           <div class="plat__card__p">
             <div class="point2">
-              <h2 class="overflow-ellipsis">Oeuf au plat</h2>
+              <h2 class="overflow-ellipsis">Soupe à l'oignon</h2>
             </div>
           </div>
 
           <div class="plat__card__p">
             <div class="point">
               <p class="overflow-ellipsis">
-                Assaisonné à la truffe sur lit de caviar
+                Revisitée
               </p>
             </div>
             <div class="main__menu__argent"><p>20€</p></div>
@@ -138,14 +138,14 @@
         <div class="colonne">
           <div class="plat__card__p">
             <div class="point2">
-              <h2 class="overflow-ellipsis">Filet de boeuf aux herbes</h2>
+              <h2 class="overflow-ellipsis">Coquilles Saint-Jacques</h2>
             </div>
           </div>
 
           <div class="plat__card__p">
             <div class="point">
               <p class="overflow-ellipsis">
-                Accompagné de sa ribambelle de légumes
+                Accompagnées d'une purée de panais
               </p>
             </div>
             <div class="main__menu__argent"><p>40€</p></div>
@@ -159,14 +159,14 @@
         <div class="colonne">
           <div class="plat__card__p">
             <div class="point2">
-              <h2 class="overflow-ellipsis">Parmentier de queue de boeuf</h2>
+              <h2 class="overflow-ellipsis">Magret de canard</h2>
             </div>
           </div>
 
           <div class="plat__card__p">
             <div class="point">
               <p class="overflow-ellipsis">
-                À la truffe noir sur sa purée de panais
+                Et parmentier de pommes de terre
               </p>
             </div>
             <div class="main__menu__argent"><p>35€</p></div>
@@ -180,13 +180,13 @@
         <div class="colonne">
           <div class="plat__card__p">
             <div class="point2">
-              <h2 class="overflow-ellipsis">Filet de Turbot</h2>
+              <h2 class="overflow-ellipsis">Pigeonneau d’Ille-et-Vilaine</h2>
             </div>
           </div>
 
           <div class="plat__card__p">
             <div class="point">
-              <p class="overflow-ellipsis">Aux agrumes</p>
+              <p class="overflow-ellipsis">Sur son lit de gnocchis aux légumes</p>
             </div>
             <div class="main__menu__argent"><p>44€</p></div>
           </div>
@@ -201,12 +201,12 @@
         <div class="colonne">
           <div class="plat__card__p">
             <div class="point2">
-              <h2 class="overflow-ellipsis">Paris-brest</h2>
+              <h2 class="overflow-ellipsis">Pétales de violettes glacés</h2>
             </div>
           </div>
 
           <div class="plat__card__p">
-            <div class="point"><p class="overflow-ellipsis">Revisté</p></div>
+            <div class="point"><p class="overflow-ellipsis">Et purée de noisettes</p></div>
             <div class="main__menu__argent"><p>18€</p></div>
           </div>
         </div>
@@ -218,13 +218,13 @@
         <div class="colonne">
           <div class="plat__card__p">
             <div class="point2">
-              <h2 class="overflow-ellipsis">Macaron au chocolat d'exeption</h2>
+              <h2 class="overflow-ellipsis">Fondant au chocolat</h2>
             </div>
           </div>
           <div class="plat__card__p">
             <div class="point">
               <p class="overflow-ellipsis">
-                Et glace à la vanille de Madagascar
+                Revisité
               </p>
             </div>
             <div class="main__menu__argent"><p>22€</p></div>
@@ -239,13 +239,13 @@
         <div class="colonne">
           <div class="plat__card__p">
             <div class="point2">
-              <h2 class="overflow-ellipsis">Mousse au chocolat</h2>
+              <h2 class="overflow-ellipsis">Millefeuille croustillant</h2>
             </div>
           </div>
           <div class="plat__card__p">
             <div class="point">
               <p class="overflow-ellipsis">
-                Au piment d'espelette et à la truffe noire
+                Myrtilles et pâte d’amande
               </p>
             </div>
             <div class="main__menu__argent"><p>23€</p></div>
